fix: alignning view duck button

--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -22,22 +22,21 @@
 }
 
 .catalog__grid {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  justify-items: center;
 }
 
 .card {
   background-color: var(--color-card3);
   border-radius: 40px;
-  margin: 30px;
+  margin: 0 20px;
+  padding: 24px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 24px;
-
-  height: 100%;
 }
 
 .card__image {
@@ -75,6 +74,12 @@
   color: #555;
 }
 
+.card__content {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 .card__button {
   background-color: var(--color-detail-btn);
   color: var(--color-accent);
@@ -86,6 +91,8 @@
   border-radius: 100px;
   padding: 14px 24px;
   cursor: pointer;
+
+  margin-top: auto;
 
   display: flex;
   align-items: center;
@@ -100,16 +107,15 @@
 }
 
 .card__button:hover {
-  /* filter: brightness(0.9) oscurece cualquier color de fondo ligeramente */
   filter: brightness(0.9);
-  transform: translateY(-2px); /* Un pequeño salto hacia arriba */
+  transform: translateY(-2px);
 }
 
 .card__button:active {
-  transform: translateY(0); /* Al hacer clic, vuelve a su sitio */
+  transform: translateY(0);
 }
 
-.card__buton-icon {
+.card__button-icon {
   height: 1.2rem;
   width: auto;
 }
@@ -139,10 +145,13 @@
     max-width: 1200px;
     margin: 20px auto;
     padding-inline: 20px;
+    align-items: stretch;
   }
 
   .card {
     margin: 0;
     width: 100%;
+    display: flex;
+    flex-direction: column;
   }
 }
